fix toast blocking mobile menu button
while invisible, the toast component was sitting on top of the mobile menu button, preventing users from pressing it

--- a/styles/_toast.scss
+++ b/styles/_toast.scss
@@ -1,4 +1,5 @@
 .toast {
+    display: none;
     position: fixed;
 
     top: 40px;
@@ -16,6 +17,13 @@
     text-align: center;
 
     z-index: 2;
+}
+
+@media (min-width: 768px) {
+
+    .toast {
+        display: block;
+    }
 }
 
 .toast > .toast__title {
